in between commit

--- a/00_anaconda_and_jupyter.ipynb
+++ b/00_anaconda_and_jupyter.ipynb
@@ -9,11 +9,10 @@
     }
    },
    "source": [
-    "# Anaconda\n"
+    "# Anaconda"
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "id": "7d7191ca",
    "metadata": {
@@ -67,7 +66,7 @@
    },
    "source": [
     "## Environments\n",
-    "When starting to work on bigger projects you will use multiple packages. Between projects, tehse differ and even sometimes cause some conflicts. That is where environments come in. They are isolated (virtual) spaces for working  with Pyton projects. When installing a package in an environment, it does not affect other environments.\n",
+    "When starting to work on bigger projects you will use multiple packages. Between projects, these differ and even sometimes cause some conflicts. That is where environments come in. They are isolated (virtual) spaces for working  with Pyton projects. When installing a package in an environment, it does not affect other environments.\n",
     "\n",
     "See [This video](https://www.youtube.com/watch?v=23aQdrS58e0) for an excellent explanation of environment management. It is demonstrated using miniconda which is Anaconda without the GUI (the GUI also gives all this functionality)."
    ]
@@ -88,7 +87,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "id": "965cd296",
    "metadata": {
@@ -146,7 +144,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "id": "21f31c8a",
    "metadata": {
@@ -176,27 +173,26 @@
    ]
   },
   {
-   "attachments": {},
-   "cell_type": "markdown",
-   "id": "9996b8bb",
+   "cell_type": "raw",
+   "id": "82f5074d",
    "metadata": {
     "slideshow": {
      "slide_type": "slide"
     }
    },
    "source": [
-    "```markup\n",
+    "\n",
     "> blockquote\n",
     "\n",
     ">> nested quote\n",
     "\n",
-    "* bullet list item\n",
-    "+ bullet list item\n",
-    "- bullet list item\n",
-    "1. numbered list item\n",
-    "![image alt text](pics/64px-Simple_Information.png) adds an image\n",
+    "* bullet list item (or +, -)\n",
+    "\n",
+    "1. A numbered list item\n",
+    "\n",
     "[click here](http://www.example.com) a clickable link\n",
-    "```"
+    "\n",
+    "![image alt text](pics/64px-Simple_Information.png) adds an image\n"
    ]
   },
   {
@@ -212,13 +208,18 @@
     "\n",
     ">> nested quote\n",
     "\n",
-    "* bullet list item\n",
-    "+ bullet list item\n",
-    "- bullet list item  \n",
+    "* bullet list item (or +, -)\n",
     "<br>\n",
-    "1. numbered list item\n",
+    "1. A numbered list item\n",
+    "<br>\n",
+    "\n",
+    "[click here](http://www.example.com) a clickable link  \n",
+    "\n",
+    "<br>\n",
+    "\n",
     "![image alt text](pics/64px-Simple_Information.png) adds an image  \n",
-    "[click here](http://www.example.com) a clickable link  "
+    "\n",
+    "<br>\n"
    ]
   },
   {
@@ -247,7 +248,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "id": "8685ee2b",
    "metadata": {
@@ -258,14 +258,14 @@
    "source": [
     "### Jupyter keyboard shortcuts\n",
     "\n",
-    "`Enter`\tto enter \"Edit mode\"\n",
+    "**`Enter`\tto enter \"Edit mode\"**\n",
     "\n",
     "```\n",
     "Cmd+A       Select all\n",
     "Cmd+C       Copy\n",
     "Cmd+X       Cut\n",
     "Cmd+V       Paste\n",
-    "Ctrl+Enter  Run/render cell\n",
+    "Cmd+Enter   Run/render cell\n",
     "Shft+Enter  Run+next\n",
     "Alt+Enter   Run+insert\n",
     "Shft+m      Merge\n",
@@ -275,7 +275,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "id": "e33544f5",
    "metadata": {
@@ -285,7 +284,7 @@
    },
    "source": [
     "\n",
-    "`Esc` Enter Command mode\n",
+    "**`Esc` Enter Command mode**\n",
     "```\n",
     "d+d   Delete cell\n",
     "y     Change to code\n",
@@ -294,6 +293,22 @@
     "b     New cell below\n",
     "a     New cell above\n",
     "```"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "f18044b8",
+   "metadata": {},
+   "source": [
+    "### IPython/Jupyter magic commands\n",
+    "There are many -simply run `%magic` to see them all- these are especially nice to know of.\n",
+    "\n",
+    "- **`%magic`**: reference on all magic commands\n",
+    "- **`%conda`**: run conda terminal command, `%conda install [pkgs]`\n",
+    "- **`%load `**: loads code from a source file and replaces the `%load` magic, `%load script.py`\n",
+    "- **`%run`**: run a script, `%run script.py`\n",
+    "- **`%time`**, **`%timeit`**:  report execution time of a statement\n",
+    "- **`%who`**, **`%who_ls`**, **`%whos`**: display variables defined in interactive namespace with varying details/display styles.\n"
    ]
   }
  ],
