--- a/01_getting_started.ipynb
+++ b/01_getting_started.ipynb
@@ -2,7 +2,11 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
    "source": [
     "# A quick overview\n",
     "\n",
@@ -13,18 +17,26 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
    "source": [
     "## An example\n",
     "\n",
-    "Suppose I want to calculate the surface of equilateral triangles, with sides 3, 4 and 2.21.\n",
+    "Suppose I want to calculate the surface of three equilateral triangles, with sides 3, 4 and 2.21 respectively.\n",
     "First I define a **variable** representing the side and assign an initial value to it. To inspect the value of a variable at any given time you can `print()` it."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
-   "metadata": {},
+   "execution_count": 3,
+   "metadata": {
+    "slideshow": {
+     "slide_type": "fragment"
+    }
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -41,11 +53,24 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "slideshow": {
+     "slide_type": "fragment"
+    }
+   },
    "source": [
-    "Note the use of `#text` to add human-readable comments to the code. Everything after `#` will be ignored when evaluating the cell.\n",
-    "\n",
-    "`print()` is a **function** that can be used to display text on the console (or in a notebook).\n",
+    "Note the use of `#text` to add human-readable comments to the code. Everything on a line after `#` will be ignored when evaluating the cell."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
+   "source": [
+    "`print()` is a **function** that can be used to display text on the console (or in a notebook).  \n",
     "If it is the last statement in a notebook cell, you can simply type the name of the variable you want to see without wrapping it in a call to print().\n",
     "\n",
     "Next, I use the `side` variable to calculate the surface of a 3 - 3 - 3 triangle. The formula is $\\frac{1}{2} * width * height$, but since it is equilateral we can simply use $\\frac{1}{2} * side^2$"
@@ -53,16 +78,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
-   "metadata": {},
+   "execution_count": 4,
+   "metadata": {
+    "slideshow": {
+     "slide_type": "fragment"
+    }
+   },
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "'The area of a equilateral triangles with side 3 is 4.5'"
+       "'The area of an equilateral triangle with side 3 is 4.5'"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -70,38 +99,66 @@
    "source": [
     "area =  0.5 * side**2\n",
     "\n",
-    "f'The area of a equilateral triangles with side {side} is {area}'\n"
+    "f'The area of an equilateral triangle with side {side} is {area}'\n"
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
    "source": [
     "The `*` and `**` symbols in the above code cell are called **(mathematical) operators** for multiplication and exponentiation, respectively. They _operate_ on _operands_ that are usually on both side of the operator. Any combination of operator and operands is an _expression_ that evaluates to a result.  \n",
     "\n",
-    "Other mathematical operators are, not surprisingle, minus (`-`), plus (`+`), division (`/`). There are many more operators, classified as _mathematical_ (like the above), _assignment_ (like the `=` symbol in the above cells), _comparison_ operators (such as `<`), and some more categories. A complete listing of operators can be found [here](https://www.w3schools.com/python/python_operators.asp) or [here](https://www.tutorialspoint.com/python/python_basic_operators.htm).\n",
-    "\n",
-    "The `f'.....{}...'` construct is a string where we can insert values from python variables."
+    "Other mathematical operators are, not surprisingly, minus (`-`), plus (`+`), division (`/`). There are many more operators, classified as _mathematical_ (like the above), _assignment_ (like the `=` symbol in the above cells), _comparison_ operators (such as `<`), and some more categories. A complete listing of operators can be found [here](https://www.w3schools.com/python/python_operators.asp) or [here](https://www.tutorialspoint.com/python/python_basic_operators.htm).\n"
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
+   "source": [
+    "This:\n",
+    "```python\n",
+    "f'The area of an equilateral triangle with side {side} is {area}'\n",
+    "```\n",
+    "is a string (a series of characters) in which we can insert values from python variables at the location of the curly braces to produce this:  \n",
+    "  \n",
+    "  \n",
+    "`'The area of an equilateral triangle with side 3 is 4.5'`\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
    "source": [
     "Now I want to do the same calculation and reporting for other triangles. I could just copy-and-paste all code, as in the cell below:"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
-   "metadata": {},
+   "execution_count": 7,
+   "metadata": {
+    "slideshow": {
+     "slide_type": "fragment"
+    }
+   },
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "The area of a equilateral triangles with side 4 is 8.0\n",
-      "The area of a equilateral triangles with side 2.21 is 2.44\n"
+      "The area of an equilateral triangle with side 4 is 8.0\n",
+      "The area of an equilateral triangle with side 2.21 is 2.44\n"
      ]
     }
    ],
@@ -109,31 +166,60 @@
     "side = 4\n",
     "area =  0.5 * side**2\n",
     "\n",
-    "print(f'The area of a equilateral triangles with side {side} is {area}') \n",
+    "print(f'The area of an equilateral triangle with side {side} is {area}') \n",
     "\n",
     "side = 2.21\n",
     "area =  0.5 * side**2\n",
     "\n",
-    "print(f'The area of a equilateral triangles with side {side} is {round(area, 2)}') #note the use of round()"
+    "#note the use of round() in the statement below\n",
+    "print(f'The area of an equilateral triangle with side {side} is {round(area, 2)}') "
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "slideshow": {
+     "slide_type": "fragment"
+    }
+   },
    "source": [
-    "This is awful!  \n",
+    "This is awful!   \n",
     "\n",
-    "Copy-and-paste activities are a real no-no in programming. Whenever you catch yourself doing it, stop and consider a better way to do it. In the vast majority of cases this will result in extracting the copied code into a custom **function**.  \n",
+    "Copy-and-paste activities are a real no-no in programming. "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
+   "source": [
+    "Whenever you catch yourself using Ctrl+C & Ctrl+V, stop and consider a better way to do it. In many cases this will result in extracting the copied code into a **function**.  \n",
     "\n",
-    "A function is a chunk of code that you can re-use, rather than copying it multiple times. Many are already available within the Python programming language (e.g. `print()`), but you write them yourself all the time as well. \n",
-    "\n",
+    "A function is a chunk of code that you can re-use, rather than copying it multiple times. Many are already available within the Python programming language (e.g. `print()`), but you write them yourself all the time as well. \n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
+   "source": [
     "Below, the re-used piece of code is embedded in the function `triangle_area()`."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
-   "metadata": {},
+   "execution_count": 6,
+   "metadata": {
+    "slideshow": {
+     "slide_type": "fragment"
+    }
+   },
    "outputs": [],
    "source": [
     "def print_triangle_area(side):\n",
@@ -143,17 +229,34 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "slideshow": {
+     "slide_type": "fragment"
+    }
+   },
    "source": [
-    "We'll visit the theory and practice of functions in a later chapter. Suffice to know here is that a named piece of code has been defined which can be used by that name when it is also given a value for its input argument, `side`.  \n",
-    "\n",
+    "We'll visit the theory and practice of functions in a later chapter. Suffice to know here is that a named piece of code has been defined which can be used by that name when it is also given a value for its input argument, `side`. "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
+   "source": [
     "With this function defined (and loaded) it is easy to repeat the operation for a series of values:"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 8,
-   "metadata": {},
+   "metadata": {
+    "slideshow": {
+     "slide_type": "fragment"
+    }
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -173,15 +276,23 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
    "source": [
     "But wait! There is still copied code. Taking a leap forward in Python programming concepts - the `for` loop, here is an even better way to do it."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
-   "metadata": {},
+   "execution_count": 8,
+   "metadata": {
+    "slideshow": {
+     "slide_type": "fragment"
+    }
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -194,29 +305,55 @@
     }
    ],
    "source": [
-    "sides = [3, 4, 2.21] # a list of values\n",
-    "for n in sides:\n",
-    "    print_triangle_area(n)"
+    "sides = [3, 4, 2.21]        # a list of values\n",
+    "for n in sides:             # iterate using for\n",
+    "    print_triangle_area(n)  # the iterated block"
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "slideshow": {
+     "slide_type": "fragment"
+    }
+   },
    "source": [
-    "The `for` loop _iterates_ an iterable (a collection of values) and performs the given block for each of the values. We call this type of construct a **flow control** element because it controls the flow of the program.  "
+    "The `for` loop _iterates_ an iterable (a collection of values) and executes the given block for each of the values. We call this type of construct a **flow control** element because it controls the flow of the program.  "
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
    "source": [
     "# A real program\n",
     "\n",
     "By now you may be thinking that this does not look like programming at all. Where is the program?\n",
-    "Actually there is no program here. A program is usually a piece of functionality on a computer or other device that receives some input (keyboard, mouse, touchscreen, sensor, etc.) and generates some output (screen, terminal, file, database).\n",
-    "\n",
-    "Given the triangle example above, a standalone program for calculating and reporting triangle surface area would look like this:\n",
-    "\n",
+    "Actually there is no program here. A program is usually a piece of functionality on a computer or other device that receives some input (keyboard, mouse, touchscreen, sensor, etc.) and generates some output (screen, terminal, file, database).\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
+   "source": [
+    "Given the triangle example above, a standalone program for calculating and reporting triangle surface area would look like this:"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "fragment"
+    }
+   },
+   "source": [
     "```python\n",
     "'''This program calculates the surface of equilateral triangles with sides given on the command line.'''\n",
     "\n",
@@ -229,7 +366,17 @@
     "for arg in sys.argv[1:]:\n",
     "    side = float(arg)\n",
     "    print_triangle_area(side)\n",
-    "```\n",
+    "```"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
+   "source": [
     "\n",
     "Suppose this code is stored in a text file (e.g. 'triangle_surface.py') on your computer it could be run from a terminal (Linux or MacOS) or command prompt (Windows) using the command \n",
     "\n",
@@ -240,29 +387,41 @@
     "The area of an equilateral triangle with side 2.21 is 2.44\n",
     "```\n",
     "\n",
-    "The code for this program, which we usually call a **script** can be found [here](./scripts/triangle_surface.py).  "
+    "The code for this program, which we usually call a **script**, can be found [here](./scripts/triangle_surface.py).  "
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
    "source": [
-    "There are some elements that you may not understand yet:  \n",
+    "There are some elements that you may not understand yet. For those who cannot proceed without a little premature explanation:  \n",
     "\n",
-    "- `import sys` says \"load the functionality located in module sys and make it available here\". The functionality that is available by default in any Python program is rather limited to keep it lean. Any additional functionality must be loaded from modules using an **import statement** that you usually find at the top of a script or notebook. You will see many more modules if you continue with Python.\n",
+    "- `import sys` says \"load the functionality located in module `sys` and make it available here\". The functionality that is available by default in any Python program is rather limited to keep it lean. Any additional functionality must be loaded from modules using an **import statement**.\n",
     "- `sys.argv` is the list of arguments entered on the command line, in this case `[\"triangle_surface.py\", \"3\", \"4\", \"2.21\"]`. We'll get to lists in the next chapter. \n",
     "- `for arg in sys.argv[1:]:` this says: \"iterate the command-line arguments but skip the first\". Again, subject of a later chapter."
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "slideshow": {
+     "slide_type": "skip"
+    }
+   },
    "source": [
     "## Excercises\n",
     "\n",
-    "These assume that you already have Python3 installed on your device and is available from the Terminal (MacOS, Linux) or Command Prompt (Windows).\n",
+    "These assume that you already have Python3 installed on your device. Use the Qt console from Anaconda Navigator for these. Alternatively you can use the terminal Python 3 REPL (Read, Evaluate Print Loop) engine by typing `python3` (so without any argument) in the Terminal or Command prompt. Both options provide an interactive Python session we call a REPL (for Read Evaluate Print Loop).  \n",
     "\n",
-    "1. In the Terminal or Command prompt, type `python3` (so without any argument). This starts an interactive Python session we call a REPL (for Read Evaluate Print Loop). First enter `import math` and press enter to load the math module. Calculate the following (using `math.pi` and `math.sqrt()` where relevant).  \n",
+    "1. First enter `import math` and press enter to load the math module. \n",
+    "\n",
+    "2. Inspect the value of `math.pi` and try out the function `math.sqrt()`.\n",
+    "\n",
+    "3. Calculate the following (using `math.pi` and `math.sqrt()` where relevant).  \n",
     "\n",
     "    - $\\frac{4.6 + 1.2}{2.09}$ \n",
     "    - $3\\times4^\\frac{7}{12}$\n",
@@ -270,9 +429,9 @@
     "      $\\frac{2}{3}\\times \\pi r^3$  \n",
     "    - $5 \\times (\\frac{4 + 2}{\\sqrt{7} \\times 9})$\n",
     "  \n",
-    "2. On your computer, create a folder that will hold the exercises of this course. In it, put a copy of the above script `triangle_surface.py`. Run the script.\n",
+    "4. On your computer, create a folder that will hold the exercises of this course. In it, put a copy of the above script [triangle_surface.py](./scripts/triangle_surface.py). Run the script as demonstrated above. Try out some other command-line arguments.\n",
     "\n",
-    "3. Change the script at some points and investigate the effect:\n",
+    "5. Change the script at some points and investigate the effect:\n",
     "    - comment-out (e.g. put a hash symbol `#` in front of it) the `import sys` statement\n",
     "    - change `float(side)` to `int(side)`\n",
     "    - change `sys.argv[1:]` to `sys.argv[2]` and to `sys.argv[2:]`\n",
@@ -281,7 +440,11 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "slideshow": {
+     "slide_type": "skip"
+    }
+   },
    "source": [
     "# Key concepts\n",
     "\n",
@@ -299,6 +462,7 @@
   }
  ],
  "metadata": {
+  "celltoolbar": "Slideshow",
   "kernelspec": {
    "display_name": "Python 3 (ipykernel)",
    "language": "python",
@@ -314,7 +478,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.13"
+   "version": "3.9.12"
   },
   "vscode": {
    "interpreter": {
