--- a/03_flow_control.ipynb
+++ b/03_flow_control.ipynb
@@ -34,6 +34,30 @@
   },
   {
    "cell_type": "markdown",
+   "id": "fef28b59",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
+   "source": [
+    "# Code blocks\n",
+    "At the heart of iteration lies the concept of code blocks: one or multiple statements that belong together and are executed multiple times, or optionally, depending on the flow control element.  \n",
+    "\n",
+    "A code block is defined by **indentation** (4 spaces usually), and in flow control it always follows an iteration or decision statement ending with a colon:\n",
+    "\n",
+    "```\n",
+    "<some flow control element>:\n",
+    "    block code \n",
+    "    block code\n",
+    "    ...\n",
+    "\n",
+    "code not belonging to the flow control element\n",
+    "```"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "f2201b39",
    "metadata": {
     "slideshow": {
@@ -52,8 +76,18 @@
     "\n",
     "Let's walk through some examples to demonstrate iteration and its details. Note that some examples can be implemented much more efficiently than shown here!\n",
     "\n",
-    "The alternative to `for`, `while` is used when you have no collection but want to repeat for another reason. This will be demonstrated at the end of this section.\n",
-    "\n",
+    "The alternative to `for`, `while` is used when you have no collection but want to repeat for another reason. This will be demonstrated at the end of this section.\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "6c07368e",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
+   "source": [
     "Here are our good old fruits:"
    ]
   },
@@ -63,7 +97,7 @@
    "id": "34656a15",
    "metadata": {
     "slideshow": {
-     "slide_type": "slide"
+     "slide_type": "fragment"
     }
    },
    "outputs": [],
@@ -246,7 +280,7 @@
     "\n",
     "```python\n",
     "for fruit in fruits:\n",
-    "    if fruit == 'banana': continue #on a single line\n",
+    "    if fruit == 'banana': continue\n",
     "    print(fruit)\n",
     "```\n",
     "\n",
@@ -470,6 +504,8 @@
    "source": [
     "### Optional: Switch(ing)\n",
     "\n",
+    "You can skip this part if you want. It is a useful and powerful technique, but not essential for a beginning programmer.\n",
+    "\n",
     "If you have a distinct set of possibilities other programming languages provide the `switch` statement. \n",
     "In Python up to version 3.10 this was not available. In the (not-executable in my Python version) snippet below it is shown for Python >= 3.10.\n",
     "\n",
@@ -492,7 +528,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 1,
    "id": "09530590",
    "metadata": {
     "slideshow": {
