--- a/04_functions.ipynb
+++ b/04_functions.ipynb
@@ -66,15 +66,14 @@
     "This function asks for the users' name and serves it back with a greeting.\n",
     "It _calls_ two functions itself to perform its task: `input()` which will read input entered using a keyboard on the command line and `print()` which outputs text to that same command-line (also called terminal or console). \n",
     "\n",
-    "Actually, this function does not adhere to the definition stated above \"... a single and well-defined task and handles error-conditions in a graceful manner.\" Can you spot the flaws in the function defined above?\n",
+    "Actually, this function does not adhere to the definition stated above \"... a single and well-defined task and handles error-conditions in a graceful manner.\" Can you spot the flaw(s) in the function defined above?\n",
     "\n",
     "<br />\n",
     "\n",
     "<details>\n",
     "<summary style=\"color:OrangeRed;cursor:pointer;\">&#10149; Just tell me!</summary>\n",
     "    <blockquote>\n",
-    "   <li> The function actually performs two separate tasks: getting the user name and giving a greeting.</li>\n",
-    "   <li> Furthermore, there is no check for the user input. What if the user enters an empty line? </li>\n",
+    "       <li> There is no check for the user input. What if the user enters an empty line? </li>\n",
     "    </blockquote>\n",
     "</details>\n",
     "\n",
@@ -90,7 +89,7 @@
    },
    "source": [
     "In this chapter we'll be looking at how to design, implement and call (use) functions. \n",
-    "We'll finish off with an overview of some of the most-used built-in function of the Python language."
+    "The next chapter deals with an overview of some of the most-used built-in functions of the Python language."
    ]
   },
   {
@@ -136,58 +135,6 @@
    "cell_type": "markdown",
    "metadata": {
     "slideshow": {
-     "slide_type": "slide"
-    }
-   },
-   "source": [
-    "Here are some variations that will NOT run because of a syntax error.  \n",
-    "\n",
-    "This one gives `IndentationError: expected an indented block` because there is no indentation in the function body:\n",
-    "\n",
-    "```python\n",
-    "def do_nothing():\n",
-    "pass\n",
-    "```\n",
-    "\n",
-    "This one gives an `IndentationError: unindent does not match any outer indentation level` because the indentation is not the same within the function body:\n",
-    "\n",
-    "```python\n",
-    "def do_nothing():\n",
-    "    print(\"one\")\n",
-    "  print(\"two\")\n",
-    "```\n"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "slideshow": {
-     "slide_type": "slide"
-    }
-   },
-   "source": [
-    "\n",
-    "This one gives a `SyntaxError: invalid syntax` because there is no colon to start the function body:\n",
-    "\n",
-    "```python\n",
-    "def do_nothing()\n",
-    "    pass\n",
-    "```\n",
-    "\n",
-    "Often, Python will be quite specific in where things go wrong, as in the last example:\n",
-    "\n",
-    "```\n",
-    "  Input In [15]\n",
-    "    def do_nothing()\n",
-    "                    ^\n",
-    "SyntaxError: invalid syntax\n",
-    "```"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "slideshow": {
      "slide_type": "skip"
     }
    },
@@ -205,6 +152,89 @@
    "cell_type": "markdown",
    "metadata": {
     "slideshow": {
+     "slide_type": "slide"
+    }
+   },
+   "source": [
+    "Here are some variations that will NOT run because of a syntax error.  \n",
+    "\n",
+    "This one gives `IndentationError: expected an indented block` because there is no indentation in the function body:\n",
+    "\n",
+    "```python\n",
+    "def do_nothing():\n",
+    "pass\n",
+    "```\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "fragment"
+    }
+   },
+   "source": [
+    "\n",
+    "This one gives an `IndentationError: unindent does not match any outer indentation level` because the indentation is not the same within the function body:\n",
+    "\n",
+    "```python\n",
+    "def do_nothing():\n",
+    "    print(\"one\")\n",
+    "  print(\"two\")\n",
+    "```"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
+   "source": [
+    "\n",
+    "This one gives a `SyntaxError: invalid syntax` because there is no colon to start the function body:\n",
+    "\n",
+    "```python\n",
+    "def do_nothing()\n",
+    "    pass\n",
+    "```\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "fragment"
+    }
+   },
+   "source": [
+    "Often, Python will be quite specific in where things go wrong, as in the last example:\n",
+    "\n",
+    "```\n",
+    "  Input In [15]\n",
+    "    def do_nothing()\n",
+    "                    ^\n",
+    "SyntaxError: invalid syntax\n",
+    "```"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
+   "source": [
+    "### A more realistic example"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
      "slide_type": "skip"
     }
    },
@@ -214,10 +244,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {
     "slideshow": {
-     "slide_type": "slide"
+     "slide_type": "fragment"
     }
    },
    "outputs": [
@@ -236,7 +266,7 @@
     "    return (1000 / 3600) * speed_km_h * time_sec\n",
     "\n",
     "print(distance_meters(36, 5))\n",
-    "print(distance_meters(100, (60*60))) # one hour\n",
+    "print(distance_meters(100, (60*60)))                  # one hour\n",
     "print(distance_meters(time_sec = 5, speed_km_h = 36)) # using named arguments\n"
    ]
   },
@@ -248,7 +278,7 @@
     }
    },
    "source": [
-    "As you can see in the above example, calling functions is quite flexible. By using **grouping parentheses** you can do some in-place calculations within the **argument list parantheses** (yes they look exactly the same but have very different functions within the code. The only difference is their context.  \n",
+    "As you can see in the above example, calling functions is quite flexible. By using **grouping parentheses** you can do some in-place calculations within the **argument list parentheses** (yes they look exactly the same but have very different functions within the code. The only difference is their context.  \n",
     "\n",
     "In the last example above you can see the use of named arguments. When using the parameter names to pass the arguments, the order in which they are passed does not need to match the order of the parameters in the function definition."
    ]
@@ -280,7 +310,7 @@
    "source": [
     "### You've got to adhere to the contract\n",
     "\n",
-    "When a function defines two parameters and no default values, you must provide exactly two values when calling the function. \n",
+    "When a function defines two parameters and no default values, you _must_ provide exactly two values when calling the function. \n",
     "These three invocations fail for that reason.\n",
     "\n",
     "```python\n",
@@ -292,7 +322,22 @@
     "You will get an error message like this: `TypeError: distance_meters() takes 2 positional arguments but 3 were given\n",
     "`.\n",
     "\n",
-    "Of course, if you provide values of a type other than expected you will get an errorif you're lucky or return values that are very strange and that are hard to debug if you are not so lucky."
+    "Of course, if you provide values of a type other than expected you will get an error (if you're lucky), or return values that are very strange and that are hard to debug if you are not so lucky."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
+   "source": [
+    "### Default values give more flexibility\n",
+    "\n",
+    "If you can think of a sensible default value for your parameters you can provide these. That way you can make the invocation and execution of your functions much more flexible. \n",
+    "\n",
+    "There is an important aspect to think about: only provide default values if they make sense, and of course you can provide only one default value so choose the most appropriate ones if you have multiple candidates."
    ]
   },
   {
@@ -303,10 +348,7 @@
     }
    },
    "source": [
-    "### Default values give more flexibility\n",
-    "\n",
-    "If you can think of a sensible default value for your parameters you can provide these. That way you can make the invocation and execution of your functions much more flexible. Here is the distance calculating function again, in a slightly modified version. The `time_sec` parameter now has a default value. This means that if this argument is omitted, you do not get an error but instead the function will execute with the default. If you _do_ provide a value for it, this will override the default value. \n",
-    "There is an important aspect to think about: only provide default values if they make sense, and of course you can provide only one default value so choose the most appropriate ones if you have multiple candidates."
+    "Here is the distance calculating function again, in a slightly modified version. The `time_sec` parameter now has a default value. This means that if this argument is omitted, you do not get an error but instead the function will execute with the default. If you _do_ provide a value for it, this will override the default value. "
    ]
   },
   {
@@ -381,6 +423,37 @@
      "slide_type": "slide"
     }
    },
+   "outputs": [],
+   "source": [
+    "def distance_meters3(speed_km_h, time_sec = 1):\n",
+    "    '''\n",
+    "    Calculate the distance.\n",
+    "    \n",
+    "    The distance is calculated in meters, given a speed in km/h and elapsed time in seconds.\n",
+    "\n",
+    "    Parameters\n",
+    "    ----------\n",
+    "    speed_km_h : float\n",
+    "        The speed in km per hour (km/h)\n",
+    "    time_sec : float\n",
+    "        Elapsed time, in seconds. Defaults to 1.\n",
+    "\n",
+    "    Returns\n",
+    "    -------\n",
+    "    float\n",
+    "        Covered distance, in meters \n",
+    "    '''\n",
+    "    return (1000 / 3600) * speed_km_h * time_sec"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {
+    "slideshow": {
+     "slide_type": "subslide"
+    }
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -409,26 +482,6 @@
     }
    ],
    "source": [
-    "def distance_meters3(speed_km_h, time_sec = 1):\n",
-    "    '''\n",
-    "    Calculate the distance.\n",
-    "    \n",
-    "    The distance is calculated in meters, given a speed in km/h and elapsed time in seconds.\n",
-    "\n",
-    "    Parameters\n",
-    "    ----------\n",
-    "    speed_km_h : float\n",
-    "        The speed in km per hour (km/h)\n",
-    "    time_sec : float\n",
-    "        Elapsed time, in seconds. Defaults to 1.\n",
-    "\n",
-    "    Returns\n",
-    "    -------\n",
-    "    float\n",
-    "        Covered distance, in meters \n",
-    "    '''\n",
-    "    return (1000 / 3600) * speed_km_h * time_sec\n",
-    "\n",
     "#print(distance_meters3.__doc__) #gives the same info, but without context.\n",
     "help(distance_meters3)"
    ]
@@ -484,11 +537,11 @@
    "cell_type": "markdown",
    "metadata": {
     "slideshow": {
-     "slide_type": "skip"
+     "slide_type": "slide"
     }
    },
    "source": [
-    "No problem here. But now the function attempts to change the value of `a`. We get an `UnboundLocalError: local variable 'a' referenced before assignment` Here, the error message is not as clear as we would possibly like it, because it seems as if the variable does not exist (yet)."
+    "No problem here. But now the function attempts to change the value of `a`. We get an `UnboundLocalError: local variable 'a' referenced before assignment` Here, the error message is not as clear as we would possibly like it because it seems as if the variable does not exist (yet)."
    ]
   },
   {
@@ -532,7 +585,7 @@
    "cell_type": "markdown",
    "metadata": {
     "slideshow": {
-     "slide_type": "skip"
+     "slide_type": "slide"
     }
    },
    "source": [
@@ -544,7 +597,7 @@
    "execution_count": null,
    "metadata": {
     "slideshow": {
-     "slide_type": "slide"
+     "slide_type": "fragment"
     }
    },
    "outputs": [],
@@ -567,7 +620,7 @@
    "cell_type": "markdown",
    "metadata": {
     "slideshow": {
-     "slide_type": "skip"
+     "slide_type": "slide"
     }
    },
    "source": [
@@ -579,7 +632,7 @@
    "execution_count": null,
    "metadata": {
     "slideshow": {
-     "slide_type": "slide"
+     "slide_type": "fragment"
     }
    },
    "outputs": [],
