--- a/05_core_library_functions.ipynb
+++ b/05_core_library_functions.ipynb
@@ -723,7 +723,11 @@
   {
    "cell_type": "markdown",
    "id": "72c7e3d9",
-   "metadata": {},
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
    "source": [
     "## Working with modules\n",
     "\n"
