--- a/09_exercises.ipynb
+++ b/09_exercises.ipynb
@@ -47,12 +47,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Uncomment the following line to see the solution or code hint\n",
-    "# %load ./exercise_solutions/exercise_0_0.py"
+    "#%load ./exercise_solutions/exercise_0_0.py"
    ]
   },
   {
@@ -68,7 +68,7 @@
    "source": [
     "### 01.1 Operator precedence\n",
     "\n",
-    "In the code cell below, it was attempted to calculate the surface area of a circle. However, because of [operator precedence](https://www.tutorialspoint.com/python/operators_precedence_example.htm) the outcome is wrong! It should be 12.57. Can you correct this by using parentheses in the calculation?"
+    "In the code cell below, it was attempted to calculate the surface area of a circle. However, because of [operator precedence](https://www.tutorialspoint.com/python/operators_precedence_example.htm) the outcome is wrong! It should be 12.57. Can you correct this by using parentheses in the calculation? While you are at it, also add some spaces to make the code more readable."
    ]
   },
   {
@@ -103,7 +103,7 @@
     "  <summary style = \"color:OrangeRed;cursor:pointer;\">&#10149; Click to see solution!</summary>\n",
     "  \n",
     "```python\n",
-    "return math.pi*(1/2*diameter)**2\n",
+    "return math.pi * (1/2 * diameter)**2\n",
     "```\n",
     "    \n",
     "</details>"
@@ -429,6 +429,18 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "# 03. Flow control"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "# Functions"
    ]
   },
@@ -487,7 +499,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.13"
+   "version": "3.9.12"
   },
   "vscode": {
    "interpreter": {
